* Throw (and log) meangingful exceptions/error messages if there is an exception in setting or getting attributes from mBeans, or invoking operations on mBeans.
* Moved logger and host files to their own packages.


git-svn-id: https://svn.apache.org/repos/asf/tomcat@287574 13f79535-47bb-0310-9956-ffa450edef68